--- a/package.json
+++ b/package.json
@@ -152,6 +152,12 @@
                     "default": false,
                     "description": "WORK IN PROGRESS - Indicates if the PowerShell functions should work against Docker Containers or regular servers",
                     "scope": "resource"
+                },
+                "NAB.UseExternalTranslationTool": {
+                    "type": "boolean",
+                    "default": false,
+                    "description": "Sets the state-attribute of the translation unit to 'needs-adaption' when running 'NAB: Refresh XLF files from g.xlf' instead of inserting a searchable string. Useful when working with external translation software.",
+                    "scope": "resource"
                 }
             }
         }
