New setting ReplaceSelfClosingXlfTags

--- a/package.json
+++ b/package.json
@@ -158,6 +158,12 @@
                     "default": false,
                     "description": "Sets the state-attribute of the translation unit to 'needs-adaption' when running 'NAB: Refresh XLF files from g.xlf' instead of inserting a searchable string. Useful when working with external translation software.",
                     "scope": "resource"
+                },
+                "NAB.ReplaceSelfClosingXlfTags": {
+                    "type": "boolean",
+                    "default": false,
+                    "description": "Replaces self closing tags like <tag/> with a separate closing tag </tag>",
+                    "scope": "resource"
                 }
             }
         }
