Updated README & UseExternalTranslationTool desc.

--- a/package.json
+++ b/package.json
@@ -156,7 +156,7 @@
                 "NAB.UseExternalTranslationTool": {
                     "type": "boolean",
                     "default": false,
-                    "description": "Sets the state-attribute of the translation unit to 'needs-adaption' when running 'NAB: Refresh XLF files from g.xlf' instead of inserting a searchable string. Useful when working with external translation software.",
+                    "description": "Modifies the state-attribute of the translation unit when running `NAB: Refresh XLF files from g.xlf` instead of inserting a searchable string. Useful when working with external translation software.",
                     "scope": "resource"
                 },
                 "NAB.ReplaceSelfClosingXlfTags": {
