Use state property in xlf-files #17 (#18)
* added setting UseExternalTranslationTool.

* Hope u like pasta. I just added more spaghetti.

* New setting ReplaceSelfClosingXlfTags

* New Enum XliffTargetState.

* Mama Mia!

* TargetState functions.

* Flipped ReplaceSelfClosingXlfTags default = true.

* Find untranslated by state.

* Flipped ReplaceSelfClosingXlfTags default = true.

* FilesToIncludeFilter

* Search full state-attribute.

* bug squashed.

* indentation of XmlStub.

* Updated regex for <target> lines.

* added filetype filter.

* copy from source when target lang == source lang.

* Updated target regex.

* Updated README & UseExternalTranslationTool desc.

* spelling correction.

* spelling correction.

* loop exit & array.shift.

--- a/package.json
+++ b/package.json
@@ -152,6 +152,18 @@
                     "default": false,
                     "description": "WORK IN PROGRESS - Indicates if the PowerShell functions should work against Docker Containers or regular servers",
                     "scope": "resource"
+                },
+                "NAB.UseExternalTranslationTool": {
+                    "type": "boolean",
+                    "default": false,
+                    "description": "Modifies the state-attribute of the translation unit when running `NAB: Refresh XLF files from g.xlf` instead of inserting a searchable string. Useful when working with external translation software.",
+                    "scope": "resource"
+                },
+                "NAB.ReplaceSelfClosingXlfTags": {
+                    "type": "boolean",
+                    "default": true,
+                    "description": "Replaces self closing tags like <tag/> with a separate closing tag </tag>",
+                    "scope": "resource"
                 }
             }
         }
