--- a/package.json
+++ b/package.json
@@ -170,6 +170,12 @@
                     "default": false,
                     "description": "If enabled, the \"NAB:Find Untranslated texts\" function only searches *.xlf files. Be aware of that the *.xlf file filter remains in \"Find in Files\" after this command has been run. This should be enabled in large projects (as Base Application) for performance reasons.",
                     "scope": "resource"
+                },
+                "NAB.MatchTranslation": {
+                    "type": "boolean",
+                    "default": true,
+                    "description": "If enabled, the \"NAB: Refresh XLF files from g.xlf\" function tries to match sources in the translated xlf file to reuse translations. A found match of \"source\" is then prefixed with [NAB: REVIEW] for manual review. If several matches are found, all matches are added and you need delete the ones you do not want. You can do this by using \"Find next untranslated\" (Ctrl+Alt+U). This feature only works if \"UseExternalTranslationTool\" is disabled.",
+                    "scope": "resource"
                 }
             }
         }
