--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "type": "git",
         "url": "https://github.com/jwikman/nab-al-tools"
     },
+    "license": "MIT",
     "keywords": [
         "multi-root ready",
         "Dynamics NAV",
@@ -202,6 +203,7 @@
         "escape-string-regexp": "^1.0.5",
         "format-duration": "^1.3.1",
         "javascript": "^1.0.0",
+        "mocha": "^7.1.1",
         "node-powershell": "^3.3.1",
         "time-stamp": "^1.1.0",
         "xmldom": "^0.1.31"
