--- a/package.json
+++ b/package.json
@@ -185,6 +185,12 @@
                     "default": true,
                     "description": "If enabled, the \"NAB: Refresh XLF files from g.xlf\" function tries to match sources in the translated xlf file to reuse translations. A found match of \"source\" is then prefixed with [NAB: SUGGESTION] for manual review. If several matches are found, all matches are added and you need delete the ones you do not want. Use \"NAB: Find next untranslated text\" (Ctrl+Alt+U) or \"NAB: Find multiple targets in XLF files\" to review all matches. This feature only works if \"UseExternalTranslationTool\" is disabled.",
                     "scope": "resource"
+                },
+                "NAB.ConsoleLogOutput": {
+                    "type": "boolean",
+                    "default": false,
+                    "description": "If enabled log statements will be printed to console.",
+                    "scope": "resource"
                 }
             }
         }
