--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "type": "git",
         "url": "https://github.com/jwikman/nab-al-tools"
     },
+    "license": "MIT",
     "keywords": [
         "multi-root ready",
         "Dynamics NAV",
@@ -196,6 +197,12 @@
                     "default": true,
                     "description": "If enabled, the \"NAB: Refresh XLF files from g.xlf\" function tries to match sources in the translated xlf file to reuse translations. A found match of \"source\" is then prefixed with [NAB: SUGGESTION] for manual review. If several matches are found, all matches are added and you need delete the ones you do not want. Use \"NAB: Find next untranslated text\" (Ctrl+Alt+U) or \"NAB: Find multiple targets in XLF files\" to review all matches. This feature only works if \"UseExternalTranslationTool\" is disabled.",
                     "scope": "resource"
+                },
+                "NAB.ConsoleLogOutput": {
+                    "type": "boolean",
+                    "default": false,
+                    "description": "If enabled log statements will be printed to console.",
+                    "scope": "resource"
                 }
             }
         }
@@ -219,16 +226,17 @@
         "xmldom": "^0.1.31"
     },
     "devDependencies": {
+        "mocha": "^7.1.1",
         "@types/capitalize": "^1.0.1",
         "@types/escape-string-regexp": "^1.0.0",
         "@types/format-duration": "^1.0.1",
         "@types/mocha": "^2.2.42",
-        "@types/node": "^8.10.59",
+        "@types/node": "^8.10.60",
         "@types/node-powershell": "^3.1.1",
         "@types/xmldom": "^0.1.29",
         "eslint": "^5.16.0",
         "tslint": "^5.20.1",
         "typescript": "^3.8.3",
-        "vscode": "^1.1.36"
+        "vscode": "^1.1.37"
     }
 }
