--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -10,18 +10,17 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [10.x, 12.x, 14.x]
-
+  test:
+    runs-on: "ubuntu-latest"
     steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2.1.0
-      with:
-        node-version: ${{ matrix.node-version }}
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+    - name: "Checkout"
+      uses: "actions/checkout@v2"
+    
+    - name: "Setup NodeJS"
+      uses: "actions/setup-node@v2.1.0"
+      
+    - name: "Install Dependencies"
+      run: "npm install"
+
+    - name: "Run Tests"
+      run: "npm run test"
