try sample from vs code docs

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -10,17 +10,20 @@ on:
     branches: [ master ]
 
 jobs:
-  test:
-    runs-on: "ubuntu-latest"
+  build:
+    strategy:
+      matrix:
+        os: [macos-latest, ubuntu-latest, windows-latest]
+    runs-on: ${{ matrix.os }}
     steps:
-    - name: "Checkout"
-      uses: "actions/checkout@v2"
-    
-    - name: "Setup NodeJS"
-      uses: "actions/setup-node@v2.1.0"
-      
-    - name: "Install Dependencies"
-      run: "npm install"
-
-    - name: "Run Tests"
-      run: "npm run test"
+    - name: Checkout
+      uses: actions/checkout@v2
+    - name: Install Node.js
+      uses: actions/setup-node@v1
+      with:
+        node-version: 10.x
+    - run: npm install
+    - name: Run tests
+      uses: GabrielBB/xvfb-action@v1.2
+      with:
+        run: npm test
