--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -14,14 +14,15 @@ jobs:
     strategy:
       matrix:
         os: [macos-latest, ubuntu-latest, windows-latest]
+        node-version: [10.x, 12.x, 14.x]
     runs-on: ${{ matrix.os }}
     steps:
     - name: Checkout
       uses: actions/checkout@v2
-    - name: Install Node.js
+    - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
-        node-version: 10.x
+        node-version: ${{ matrix.node-version }}
     - run: npm install
     - name: Run tests
       uses: GabrielBB/xvfb-action@v1.2
