--- a/package.json
+++ b/package.json
@@ -208,20 +208,20 @@
                     "description": "If enabled log statements will be printed to console.",
                     "scope": "resource"
                 },
-                "NAB.ToolTipDocsIgnorePageExtensionIds": {
+                "NAB.TooltipDocsIgnorePageExtensionIds": {
                     "type": "array",
                     "default": [],
                     "pattern": "^[0-9]+$",
                     "patternErrorMessage": "Only numerical Object Id numbers are allowed in the array",
-                    "description": "An array of the Ids of the Page Extensions that should be ignored when generating MarkDown documentation from ToolTips",
+                    "description": "An array of the Ids of the Page Extensions that should be ignored when generating ToolTip documentation",
                     "scope": "resource"
                 },
-                "NAB.ToolTipDocsIgnorePageIds": {
+                "NAB.TooltipDocsIgnorePageIds": {
                     "type": "array",
                     "default": [],
                     "pattern": "^[0-9]+$",
                     "patternErrorMessage": "Only numerical Object Id numbers are allowed in the array",
-                    "description": "An array of the Ids of the Page Extensions that should be ignored when generating MarkDown documentation from ToolTips",
+                    "description": "An array of the Ids of the Pages that should be ignored when generating ToolTip documentation",
                     "scope": "resource"
                 }
             }
