--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "nab-al-tools",
     "displayName": "NAB AL Tools",
     "description": "Development and translation management tool for AL language and Microsoft Dynamics 365 Business Central extensions.",
-    "version": "0.3.33",
+    "version": "0.3.34",
     "publisher": "nabsolutions",
     "repository": {
         "type": "git",
@@ -128,6 +128,10 @@
             {
                 "command": "nab.DeployAndRunTestTool",
                 "title": "NAB: Deploy and Run TestTool with Debugger"
+            },
+            {
+                "command": "nab.GenerateToolTipDocumentation",
+                "title": "NAB: Generate ToolTip Documentation"
             }
         ],
         "keybindings": [
@@ -204,6 +208,22 @@
                     "type": "boolean",
                     "default": false,
                     "description": "If enabled log statements will be printed to console.",
+                    "scope": "resource"
+                },
+                "NAB.TooltipDocsIgnorePageExtensionIds": {
+                    "type": "array",
+                    "default": [],
+                    "pattern": "^[0-9]+$",
+                    "patternErrorMessage": "Only numerical Object Id numbers are allowed in the array",
+                    "description": "An array of the Ids of the Page Extensions that should be ignored when generating ToolTip documentation",
+                    "scope": "resource"
+                },
+                "NAB.TooltipDocsIgnorePageIds": {
+                    "type": "array",
+                    "default": [],
+                    "pattern": "^[0-9]+$",
+                    "patternErrorMessage": "Only numerical Object Id numbers are allowed in the array",
+                    "description": "An array of the Ids of the Pages that should be ignored when generating ToolTip documentation",
                     "scope": "resource"
                 }
             }
