--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         os: [macos-latest, ubuntu-latest, windows-latest]
-        node-version: [10.x, 12.x, 14.x]
+        node-version: [12.x, 14.x]
     runs-on: ${{ matrix.os }}
     steps:
     - name: Checkout
@@ -25,6 +25,6 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm install
     - name: Run tests
-      uses: GabrielBB/xvfb-action@v1.2
+      uses: GabrielBB/xvfb-action@v1
       with:
         run: npm test
