Fixed path for tests

--- a/extension/.vscode/launch.json
+++ b/extension/.vscode/launch.json
@@ -31,7 +31,7 @@
             "request": "launch",
             "runtimeExecutable": "${execPath}",
             "args": [
-                "${workspaceFolder}/src/test/TestApp/TestApp.code-workspace",
+                "${workspaceFolder}/../test-app/TestApp.code-workspace",
                 "--extensionDevelopmentPath=${workspaceFolder}",
                 "--extensionTestsPath=${workspaceFolder}/out/test"
             ],
