--- a/extension/package.json
+++ b/extension/package.json
@@ -93,6 +93,10 @@
                 "title": "NAB: Match translations from external XLF file"
             },
             {
+                "command": "nab.MatchTranslations",
+                "title": "NAB: Match Translations"
+            },
+            {
                 "command": "nab.SortXlfFiles",
                 "title": "NAB: Sort XLF files as g.xlf"
             },
