--- a/extension/package.json
+++ b/extension/package.json
@@ -242,6 +242,7 @@
         "test": "npm run compile && node ./node_modules/vscode/bin/test"
     },
     "dependencies": {
+        "axios": "^0.21.0",
         "capitalize": "^2.0.3",
         "compare-versions": "^3.6.0",
         "escape-string-regexp": "^1.0.5",
