launch test app

--- a/extension/.vscode/launch.json
+++ b/extension/.vscode/launch.json
@@ -17,6 +17,7 @@
             "request": "launch",
             "runtimeExecutable": "${execPath}",
             "args": [
+                "${workspaceFolder}/../test-app/TestApp.code-workspace",
                 "--extensionDevelopmentPath=${workspaceFolder}"
             ],
             "outFiles": [
