--- a/extension/tsconfig.json
+++ b/extension/tsconfig.json
@@ -1,12 +1,13 @@
 {
     "compilerOptions": {
         "module": "commonjs",
-        "target": "es2018",
+        "target": "ES2019",
         "outDir": "out",
         "lib": [
-            "es6",
+            "ES2019",
             "dom",
-            "es2018.regexp"
+            "es2018.regexp",
+            "ES2020.String"
         ],
         "sourceMap": true,
         "rootDir": "src",
