--- a/extension/package.json
+++ b/extension/package.json
@@ -2,7 +2,7 @@
     "name": "nab-al-tools",
     "displayName": "NAB AL Tools",
     "description": "Development and translation management tool for AL language and Microsoft Dynamics 365 Business Central extensions.",
-    "version": "0.3.35",
+    "version": "0.3.36",
     "publisher": "nabsolutions",
     "repository": {
         "type": "git",
@@ -139,7 +139,7 @@
             },
             {
                 "command": "nab.UpdateGXlfFile",
-                "title": "NAB: Update g.xlf file from code"
+                "title": "NAB: Update g.xlf"
             }
         ],
         "keybindings": [
