--- a/extension/package.json
+++ b/extension/package.json
@@ -28,7 +28,7 @@
         "url": "https://github.com/jwikman/nab-al-tools/issues"
     },
     "engines": {
-        "vscode": "^1.30.0"
+        "vscode": "^1.50.0"
     },
     "categories": [
         "Other",
@@ -136,6 +136,10 @@
             {
                 "command": "nab.GenerateToolTipDocumentation",
                 "title": "NAB: Generate ToolTip Documentation"
+            },
+            {
+                "command": "nab.editXliffDocument",
+                "title": "NAB: Edit Xliff Document"
             }
         ],
         "keybindings": [
@@ -260,9 +264,11 @@
         "@types/node": "^8.10.60",
         "@types/node-powershell": "^3.1.1",
         "@types/xmldom": "^0.1.29",
-        "eslint": "^5.16.0",
-        "tslint": "^5.20.1",
-        "typescript": "^3.8.3",
+        "@typescript-eslint/eslint-plugin": "^3.0.2",
+        "@typescript-eslint/parser": "^3.0.2",
+        "eslint": "^7.1.0",
+        "typescript": "^4.0.2",
+        "@types/vscode": "^1.50.0",
         "vscode": "^1.1.37"
     }
 }
