add new env variables

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -18,6 +18,10 @@ jobs:
     runs-on: ${{ matrix.os }}
     env:
         working-directory: ./extension/
+        CODE_TESTS_WORKSPACE: ./extension/test-app/TestApp.code-workspace # arg[1]
+        CODE_EXTENSIONS_PATH: ./extension/                                # --extensionDevelopmentPath
+        CODE_TEST_DATA_DIR: ./extension/out/test/                         # --extensionTestsPath
+        CODE_LOCALE: en
     steps:
     - name: Checkout
       uses: actions/checkout@v2
