--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -18,7 +18,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     env:
         working-directory: ./extension/
-        CODE_TESTS_WORKSPACE: ./extension/test-app/TestApp.code-workspace # arg[1]
+        CODE_TESTS_WORKSPACE: ../test-app/TestApp.code-workspace # arg[1]
         CODE_EXTENSIONS_PATH: ./extension/                                # --extensionDevelopmentPath
         CODE_TEST_DATA_DIR: ./extension/out/test/                         # --extensionTestsPath
         CODE_LOCALE: en
