--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -17,9 +17,9 @@ jobs:
         node-version: [12.x, 14.x]
     runs-on: ${{ matrix.os }}
     env:
-        #working-directory: ./extension/
+        working-directory: ./extension/
         CODE_TESTS_WORKSPACE: ../test-app/TestApp.code-workspace # arg[1]
-        #CODE_EXTENSIONS_PATH: ./extension/                                # --extensionDevelopmentPath
+        CODE_EXTENSIONS_PATH: ./extension/                                # --extensionDevelopmentPath
         CODE_TEST_DATA_DIR: ./extension/out/test/                         # --extensionTestsPath
         CODE_LOCALE: en
     steps:
