--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -15,11 +15,17 @@ jobs:
       matrix:
         os: [macos-latest, ubuntu-latest, windows-latest]
         node-version: [12.x, 14.x]
+        test-workspace: [
+          /Users/runner/work/nab-al-tools/nab-al-tools/TestApp.code-workspace,
+          home/runner/work/nab-al-tools/nab-al-tools/TestApp.code-workspace,
+          D:\a\nab-al-tools\nab-al-tools\TestApp.code-workspace
+        ]
     runs-on: ${{ matrix.os }}
     env:
     #/home/runner/work/nab-al-tools/nab-al-tools/extension/out/test
         working-directory: ./extension/
-        CODE_TESTS_WORKSPACE: $HOME/nab-al-tools/test-app/TestApp.code-workspace # arg[1]
+        CODE_TESTS_WORKSPACE: ${{ matrix.test-workspace }}
+        # CODE_TESTS_WORKSPACE: $HOME/nab-al-tools/test-app/TestApp.code-workspace # arg[1]
         # CODE_TESTS_WORKSPACE: ../test-app/TestApp.code-workspace # arg[1]
         # CODE_EXTENSIONS_PATH: ./extension/                                # --extensionDevelopmentPath
         # CODE_TEST_DATA_DIR: ./extension/out/test/                         # --extensionTestsPath
