Match Translations From Base Application (#67)
* sort works in place

* add BC17 base app sv-SE xlf

* add test for translationMap

* update dependencies

* add types for external resources and tests

* add da-dk xlf in test app

* launch test app

* enable filtering of which files to download

* use ES2019 and ES2020.String

* add new function downloadBaseAppTranslationFiles

* match translations from map

* version bump on package-lock

* support multiple targets on trans-unit. Target[]

* add new directory for tools

* update readme

* setup all languagefiles

* match from Base App working properly

* We don't need to test translationMap on Base App Xlf :)

* improved regex

* paste correctly formatted function from master

* 10 sec timeout

* Update extension/src/test/ExternalResources.test.ts

Co-authored-by: Johannes Wikman <jwikman@users.noreply.github.com>

* test for null and undefined

Co-authored-by: Johannes Wikman <jwikman@users.noreply.github.com>

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -18,6 +18,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     env:
         working-directory: ./extension/
+        CODE_TESTS_WORKSPACE: ${{github.workspace}}/test-app/TestApp.code-workspace # VS Code environment variable
     steps:
     - name: Checkout
       uses: actions/checkout@v2
