--- a/extension/.vscode/tasks.json
+++ b/extension/.vscode/tasks.json
@@ -15,6 +15,48 @@
                 "kind": "build",
                 "isDefault": true
             }
+        },
+        {
+            "label": "Package Preview",
+            "type": "shell",
+            "command": "${workspaceFolder}\\..\\dev-tools\\PowerShell\\Create-PreviewVSIX.ps1",
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": false,
+                "panel": "shared",
+                "showReuseMessage": true,
+                "clear": false
+            },
+            "problemMatcher": []
+        },
+        {
+            "label": "Package Live",
+            "type": "shell",
+            "command": "${workspaceFolder}\\..\\dev-tools\\PowerShell\\Create-LiveVSIX.ps1",
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": false,
+                "panel": "shared",
+                "showReuseMessage": true,
+                "clear": false
+            },
+            "problemMatcher": []
+        },
+        {
+            "label": "Publish on Marketplace",
+            "type": "shell",
+            "command": "${workspaceFolder}\\..\\dev-tools\\PowerShell\\Publish-ToMarketplace.ps1",
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": true,
+                "panel": "shared",
+                "showReuseMessage": true,
+                "clear": false
+            },
+            "problemMatcher": []
         }
     ]
 }
