--- a/extension/package.json
+++ b/extension/package.json
@@ -322,10 +322,13 @@
         "@types/node": "^8.10.66",
         "@types/node-powershell": "^3.1.1",
         "@types/xmldom": "^0.1.30",
-        "eslint": "^5.16.0",
+        "@typescript-eslint/eslint-plugin": "^3.0.2",
+        "@typescript-eslint/parser": "^3.0.2",
+        "@types/vscode": "^1.50.0",
+        "eslint": "^7.1.0",
         "mocha": "^7.2.0",
         "tslint": "^5.20.1",
-        "typescript": "^3.9.7",
+        "typescript": "^4.0.2",
         "vscode": "^1.1.37"
     }
 }
