--- a/extension/package.json
+++ b/extension/package.json
@@ -153,6 +153,10 @@
                 "title": "NAB: Generate ToolTip Documentation"
             },
             {
+                "command": "nab.GenerateExternalDocumentation",
+                "title": "NAB: Generate External Documentation"
+            },
+            {
                 "command": "nab.UninstallDependencies",
                 "title": "NAB: Uninstall dependent apps"
             },
@@ -327,22 +331,24 @@
         "javascript": "^1.0.0",
         "node-powershell": "^3.3.1",
         "time-stamp": "^1.1.0",
-        "xmldom": "^0.1.31"
+        "xmldom": "^0.1.31",
+        "lodash": "^4.17.21"
     },
     "devDependencies": {
         "@types/capitalize": "^1.0.2",
         "@types/escape-string-regexp": "^1.0.0",
         "@types/format-duration": "^1.0.1",
+        "@types/lodash": "^4.14.168",
         "@types/mocha": "^2.2.42",
         "@types/node": "^8.10.66",
         "@types/node-powershell": "^3.1.1",
         "@types/xmldom": "^0.1.30",
         "@typescript-eslint/eslint-plugin": "^3.0.2",
         "@typescript-eslint/parser": "^3.0.2",
-        "eslint": "^7.1.0",
+        "eslint": "^7.20.0",
         "mocha": "^7.2.0",
         "tslint": "^5.20.1",
-        "typescript": "^4.0.2",
+        "typescript": "^4.1.5",
         "vscode": "^1.1.37"
     }
 }
